--- a/senai/src/app/app.component.html
+++ b/senai/src/app/app.component.html
@@ -1,106 +1,3 @@
-<div id="containerForm">
-  <form name="formularioData" id="formularioData">
-      <h2>Meu código JavaScript</h2>
-      <h4 id="botao">Botão</h4>
-      <button type="button" onclick="document.getElementById('botao').innerHTML = new Date()">Clique aqui para uma surpresa.</button>
-  </form>
-
-  <h1>Meu Formulário</h1>
-
-  <form name="formulario" id="formulario">
-      <label for="entrada">Nome </label>
-      <input type="text" id="entrada" name="entrada">
-      <button type="button" onclick="document.getElementById('resultado').innerText = document.getElementById('entrada').value">Mostrar Nome</button>
-  </form>
-
-  <p id="resultado"></p>
-  <br><br><br><br>
-
-  <form name="formFrota" id="formFrota">
-      <legend>Cadastro Veículo</legend><br>
-
-      <label for="marca">Marca: </label>
-      <input type="text" id="marca" name="marca" placeholder="Digite a marca" required #marca><br><br>
-
-      <label for="modelo">Modelo: </label>
-      <input type="text" id="modelo" name="modelo" placeholder="Digite o modelo" required><br><br>
-
-      <label for="anofabricacao">Ano Fabricação: </label>
-      <input type="number" id="anofabricacao" name="anofabricacao" placeholder="Digite o ano de fabricação" value="2000" required><br><br>
-
-      <label for="anoModelo">Ano Modelo: </label>
-      <input type="number" id="anoModelo" name="anoModelo" placeholder="Digite o ano do modelo" value="2000" required><br><br>
-
-      <label for="motor">Motor: </label>
-      <input type="text" id="motor" name="motor" placeholder="Digite a potência do motor" required><br><br>
-
-      <label for="capacidade">Capacidade: </label>
-      <input type="text" id="capacidade" name="capacidade" placeholder="Capacidade do tanque" required><br><br>
-
-      <label for="cor">Cor: </label>
-      <input type="text" id="cor" name="cor" placeholder="Digite a cor" required><br><br>
-
-      <label for="placa">Placa: </label>
-      <input type="text" id="placa" name="placa" placeholder="Digite a placa" required><br><br>
-
-      <label for="renavam">Renavam: </label>
-      <input type="text" id="renavam" name="renavam" placeholder="Digite o renavam" required><br><br>
-
-      <label for="combustivel">Combustível: </label>
-      <select id="combustivel" name="combustivel">
-          <option value="gasolina">Gasolina</option>
-          <option value="alcool">Álcool</option>
-          <option value="flex">Flex</option>
-          <option value="diesel">Diesel</option>
-      </select>
-
-      <br><br>
-      <button type="button" (click)="getHelloMessage()">Voltar</button>
-      <input type="submit" id="cadastrar" (click)="cadastro()"name="cadastrar" type="button" value="Cadastrar" />
-      <br>
-      <input type="submit" id="soma" (click)="soma('10','20')"name="cadastrar" type="button" value="Soma" />
-  </form>
-</div>
-
-<p id="resultadoFrota"></p>
-
-<script>
-  /*
-  function mensagem() {
-    alert('teste')
-      console.log("Mensagem");
-  }
-
-  // Formulário Cadastro
-  var botaoCadastrar = document.getElementById("cadastrar");
-
-  botaoCadastrar.addEventListener("click", (e) => {
-      e.preventDefault();
-      let marca = document.querySelector("#marca").value;
-      let modelo = document.querySelector("#modelo").value;
-      let anofabricacao = document.querySelector("#anofabricacao").value;
-      let anoModelo = document.querySelector("#anoModelo").value;
-      let motor = document.querySelector("#motor").value;
-      let cor = document.querySelector("#cor").value;
-      let placa = document.querySelector("#placa").value;
-      let renavam = document.querySelector("#renavam").value;
-      let combustivel = document.querySelector("#combustivel").value;
-
-      if (marca === "" || modelo === "" || anofabricacao === "" || anoModelo === "") {
-          alert("Preencha todos os campos");
-      } else {
-          alert("Veículo Cadastrado com sucesso.\nMarca: " + marca + "\nModelo: " + modelo + "\nAno Fabricação: " + anofabricacao + "\nAno Modelo: " + anoModelo);
-
-          // Limpar inputs
-          document.querySelector("#marca").value = "";
-          document.querySelector("#modelo").value = "";
-          document.querySelector("#anofabricacao").value = "";
-          document.querySelector("#anoModelo").value = "";
-          document.querySelector("#motor").value = "";
-          document.querySelector("#cor").value = "";
-          document.querySelector("#placa").value = "";
-          document.querySelector("#renavam").value = "";
-          document.querySelector("#combustivel").value = "";
-      }
-  });*/
-</script>
+<app-menu></app-menu>
+<router-outlet />
+<app-footer></app-footer>
