--- a/senai/src/app/pages/menu/menu.component.html
+++ b/senai/src/app/pages/menu/menu.component.html
@@ -1,11 +1,11 @@
 
 <nav id="menu">
     <ul>
-        <li><a href="/cadastrarVeiculo">Home</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="/cadastrarVeiculo">Cadastrar Veículo</a></li>
-        <li><a href="/cadastrarVeiculo">Listar Veículos</a></li>
-        <li><a href="/cadastrarVeiculo">Cadastrar Despesa</a></li>
-        <li><a href="/cadastrarVeiculo">Listar Despesas</a></li>
+        <li><a href="/listarVeiculos">Listar Veículos</a></li>
+        <li><a href="/cadastrarDespesa">Cadastrar Despesa</a></li>
+        <li><a href="/listarDespesas">Listar Despesas</a></li>
     </ul>
 </nav>
 
