--- a/senai/src/app/app.component.css
+++ b/senai/src/app/app.component.css
@@ -1,9 +1,11 @@
-*{
+
+
+/* p,h1,h2,label,form, button{
     text-align: center;
 }
-body{
-    background-color: lightblue;
-}
+*{
+    background-color: lightgray;
+}   
 h1{
     text-transform: uppercase;
     color: blue;
@@ -16,3 +18,21 @@ h4{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
+#containerForm{
+    width: 500px;
+    padding: 20px;
+    margin: 0 auto;
+    border: 1px solid gray;
+}
+input{
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
+input:hover, input:focus{
+    border-color: red;
+    box-shadow: 5px 0px 10px coral;
+    background-color: chocolate;
+    color: red;
+} */
+
